# ai-sentences

./: .gitignore  001.txt
scripts/: pyproject.toml
scripts/aisentences/: id3v2.py
